--- a/fourDVar-examples/build.gradle
+++ b/fourDVar-examples/build.gradle
@@ -23,10 +23,11 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile group: "io.improbable", name: "keanu", version: "0.0.5"
+    compile group: "io.improbable", name: "keanu", version: "0.0.4"
     compile project(":finiteDifference")
-    compile 'org.apache.commons:commons-exec:1.2'
-    compile 'org.apache.commons:commons-math3:3.6.1'
+    compile project(":examples")
+    compile project(":gnuPlotLib")
+    compile project(":fourDVar")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
