--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'swayze'
 include 'finiteDifference'
-include 'swayze-examples'
 include 'finiteDifference-examples'
 include 'gnuPlotLib'
+include 'fourDVar'
+include 'fourDVar-examples'
 
